removed fixed height on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -94,7 +94,7 @@ canvas {
     display: none;
     @media (max-width: 500px) {
       display: block;
-      padding: 30px 0;
+      padding: 0 0 30px 0;
       max-width: 25%;
       margin: 0 auto;
     }
@@ -132,10 +132,11 @@ canvas {
     background-size: contain;  
     background-repeat: no-repeat;
     width: 100vw;
-    height: 100vh;
-    overflow-y: scroll;
+    // height: 100vh;
+    // overflow-y: scroll;
     @media (max-width: 500px) {
       background-image: none;
+      height: 100%;
     }
 
     .logo {
